now link downloading and continuation code seems to be working