@@ -2,8 +2,9 @@ package com.hourglassapps.cpi_ii.web_search.bing;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -22,7 +23,8 @@ import org.apache.http.impl.client.BasicResponseHandler;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.lucene.util.BytesRefHash.MaxBytesLengthExceededException;
 
-import com.hourglassapps.cpi_ii.web_search.AbstractQuery;
+import com.hourglassapps.cpi_ii.web_search.AbstractSearchEngine;
+import com.hourglassapps.cpi_ii.web_search.Query;
 import com.hourglassapps.cpi_ii.web_search.bing.response.Response;
 import com.hourglassapps.util.ConcreteThrower;
 import com.hourglassapps.util.Ii;
@@ -30,8 +32,8 @@ import com.hourglassapps.util.Log;
 import com.hourglassapps.util.Rtu;
 import com.hourglassapps.util.Thrower;
 
-public class MainQuery extends AbstractQuery implements Thrower {
-	private final static String TAG=MainQuery.class.getName();
+public class BingSearchEngine extends AbstractSearchEngine implements Thrower {
+	private final static String TAG=BingSearchEngine.class.getName();
 	
 	private final static String SEARCH_PATH_PREFIX="/Bing/SearchWeb/Web?Query=%27%28";
 	private final static String SEARCH_URI_PREFIX=
@@ -47,6 +49,7 @@ public class MainQuery extends AbstractQuery implements Thrower {
 	//A length 0f 2047 is too long. I do know from experience that a length of 2007 works though so I'll round it off to 2000 and go with that.
 	//private final static int TOTAL_QUERY_LEN=2047; //from http://stackoverflow.com/questions/15334531/what-are-the-query-length-limits-for-the-bing-websearch-api
 	private final static int TOTAL_QUERY_LEN=2000;
+	private final static Query<String,URL> NULL_QUERY=new HttpQuery<String>("");
 	public static final String AUTH_KEY = "xD0E++DfZY7Sbumxx2QBuvmgOGliDgHuDIm0LzIGr3E=";
 
 	static {
@@ -70,14 +73,14 @@ public class MainQuery extends AbstractQuery implements Thrower {
 	private boolean mSearchInvoked=false;
 	private String mBlacklistedPhrases="";
 	private String mBlacklistedSites="";
-	
-	//private int mLongest=1000;
+		
+	private int mLongest=1000;
 
-	public MainQuery(String pAccountKey) {
+	public BingSearchEngine(String pAccountKey) {
 		mAccountKey=new String(Base64.encodeBase64((':'+pAccountKey).getBytes()));
 	}
 	
-	public MainQuery() {
+	public BingSearchEngine() {
 		mAccountKey=null;
 	}
 	
@@ -111,7 +114,7 @@ public class MainQuery extends AbstractQuery implements Thrower {
 
 	@Override
 	protected boolean addDisjunction(String pDisjunction) throws UnsupportedEncodingException {
-		String encoded=encodeDisjunction(pDisjunction);
+		String encoded=encodeDisjunction("\""+pDisjunction+"\"");
 		if(len()+encoded.length()<=maxQueryLen()) {
 			mQuery.append(encoded);
 			return true;
@@ -131,47 +134,61 @@ public class MainQuery extends AbstractQuery implements Thrower {
 	}
 
 	@Override
-	protected URI uri() throws URISyntaxException {
-		return new URI(SEARCH_URI_PREFIX+mQuery.append(CLOSING_BRACKET).append(mBlacklistedSites).append(mBlacklistedPhrases).append(SEARCH_PATH_SUFFIX).toString());
+	protected URL uri() throws MalformedURLException {
+		return new URL(SEARCH_URI_PREFIX+mQuery.append(CLOSING_BRACKET).append(mBlacklistedSites).append(mBlacklistedPhrases).append(SEARCH_PATH_SUFFIX).toString());
 	}
 
-	private Response page(URI pQuery) throws ClientProtocolException, IOException {
-		HttpGet get=new HttpGet(pQuery);
+	private Response page(URL pQuery) throws ClientProtocolException, IOException, URISyntaxException {
+		HttpGet get=new HttpGet(pQuery.toURI());
 		get.setHeader(AUTH_HEADER, AUTH_PREFIX+mAccountKey);
 		ResponseHandler<String> respHandler=new BasicResponseHandler();
 		System.out.println(URLDecoder.decode(pQuery.toString(), ENCODING));
 		final String body;
 		if(mAccountKey==null) {
 			body="{\"d\":{\"results\":[]}}";
-		} else {
-		//} else if(pQuery.toString().length()>mLongest) {
-			body=mClient.execute(get, respHandler);	
-		//	mLongest=pQuery.toString().length();
 		//} else {
-		//	body="{\"d\":{\"results\":[]}}";
+		} else if(pQuery.toString().length()>mLongest) {
+			body=mClient.execute(get, respHandler);	
+			mLongest=pQuery.toString().length();
+		} else {
+			body="{\"d\":{\"results\":[]}}";
 		}
 		//System.out.println("response: "+body);
 		return mFact.inst(body);		
 	}
 
 	@Override
-	public Iterator<URI> search(List<String> pDisjunctions) throws IOException {
+	public Query<String,URL> formulate(List<String> pDisjunctions) 
+			throws UnsupportedEncodingException, MalformedURLException {
 		mSearchInvoked=true;
 		if(mThrower.fallThrough()) {
-			return Collections.<URI>emptyList().iterator();
+			return NULL_QUERY;
 		}
-		Ii<URI, List<String>> queryMoreDisjunctions;
+		String uniqueName=uniqueName(pDisjunctions);
+		Ii<URL, List<String>> queryRemainder=format(pDisjunctions);
+		if(pDisjunctions.size()==queryRemainder.snd().size() || pDisjunctions.size()==0) {
+			return NULL_QUERY;
+		}
+		return new HttpQuery<String>(uniqueName, queryRemainder);
+	}
+
+	@Override
+	public Iterator<URL> present(Query<String,URL> pQuery) throws IOException {
+		mSearchInvoked=true;
+		if(mThrower.fallThrough()) {
+			return Collections.<URL>emptyList().iterator();
+		}
+		if(pQuery.done()) {
+			//no room for disjunctions in query
+			return Collections.<URL>emptyList().iterator();
+		}
+		assert(pQuery.raw()!=null);
 		try {
-			queryMoreDisjunctions = format(pDisjunctions);
-			if(queryMoreDisjunctions.snd().size()==pDisjunctions.size()) {
-				//no room for disjunctions in query
-				return Collections.<URI>emptyList().iterator();
-			}
-			final Response resp=page(queryMoreDisjunctions.fst());
-			return new Iterator<URI>() {
+			final Response resp = page(pQuery.raw());
+			return new Iterator<URL>() {
 				private int mPageNum=0;
 				private Response mResponse=resp;
-				private Iterator<URI> mPage=mResponse.urls().iterator();
+				private Iterator<URL> mPage=mResponse.urls().iterator();
 
 				@Override
 				public boolean hasNext() {
@@ -191,7 +208,7 @@ public class MainQuery extends AbstractQuery implements Thrower {
 					if(mPageNum+1>=MAX_RESULT_PAGES) {
 						return false;
 					}
-					URI next=mResponse.next();
+					URL next=mResponse.next();
 					if(next==null) {
 						return false;
 					}
@@ -202,7 +219,7 @@ public class MainQuery extends AbstractQuery implements Thrower {
 				}
 
 				@Override
-				public URI next() {
+				public URL next() {
 					assert mPageNum<MAX_RESULT_PAGES;
 					return mPage.next();
 				}
@@ -212,20 +229,9 @@ public class MainQuery extends AbstractQuery implements Thrower {
 					throw new UnsupportedOperationException();
 				}
 			};
-		} catch (URISyntaxException e1) {
-			mThrower.ctch(e1);
-			return Collections.<URI>emptyList().iterator();
-		}
-	}
-
-	public static void main(String[] pArgs) {
-		try(MainQuery q=new MainQuery(AUTH_KEY);) {
-			Iterator<URI> results=q.search(Collections.singletonList("test"));
-			while(results.hasNext()) {
-				results.next();
-			}
-		} catch (Exception e) {
-			Log.e(TAG, e);
+		} catch (URISyntaxException e) {
+			mThrower.ctch(e);
+			return Collections.<URL>emptyList().iterator();
 		}
 	}
 
@@ -274,5 +280,5 @@ public class MainQuery extends AbstractQuery implements Thrower {
 		} else {
 			return false;
 		}
-	}	
+	}
 }
